修改 numpy 模組內容

--- a/python 模組使用練習/numpy 模組.ipynb
+++ b/python 模組使用練習/numpy 模組.ipynb
@@ -39,12 +39,24 @@
       " [ 4  5  6]\n",
       " [ 7  8  9]\n",
       " [10 11 12]]\n",
+      "[[ 1  2  3  7  8  9]\n",
+      " [ 4  5  6 10 11 12]]\n",
       "[[ 1  2  3  4  5]\n",
       " [ 6  7  8  9 10]]\n",
+      "[[ 1  6]\n",
+      " [ 2  7]\n",
+      " [ 3  8]\n",
+      " [ 4  9]\n",
+      " [ 5 10]]\n",
       "[[[ 1  2  3]\n",
       "  [ 4  5  6]]\n",
       "\n",
       " [[ 7  8  9]\n",
+      "  [10 11 12]]]\n",
+      "[[[ 1  2  3]\n",
+      "  [ 7  8  9]]\n",
+      "\n",
+      " [[ 4  5  6]\n",
       "  [10 11 12]]]\n",
       "(array([3, 4]),)\n",
       "[30 40]\n",
@@ -211,9 +223,17 @@
     "\n",
     "# 基本上就是合併， concatenate 是同一維度的合併， stack 是增加維度的合併 ( 疊更高 )\n",
     "\n",
+    "# ( concatenate 常用在陣列是一列一筆資料的陣列，然後要合併在一起，資料列變多 )\n",
+    "\n",
+    "# ( stack 常用在陣列是一欄位對應的一個序列資料的陣列，然後要反轉後合併，讓原本一欄一為一列的資料變成一欄多列的資料，符合一般 dataframe 等資料常見格式 )\n",
+    "\n",
     "# c-1. concatentate() 等同 \n",
     "\n",
+    "    # 一維 :\n",
+    "\n",
     "    # list 的 extend ( 一維合併，同一維度的擴展，所以在一維就是行的增加，舊的版本就是 x 軸方向的合併，記得第一個參數要用 tuple 包起來要合併的陣列 ) \n",
+    "\n",
+    "    # axis 可以設定為 0 或 -1，但一維的結果都一樣，都是往 x 軸方向合併\n",
     "\n",
     "array_7 = numpy.array([6,7,8,9,10])\n",
     "\n",
@@ -221,9 +241,15 @@
     "\n",
     "print(array_8)\n",
     "\n",
+    "    # 二維 : \n",
+    "\n",
+    "    # axis = 0 ( 往 y 方向，列的方向 )\n",
+    "\n",
     "    # dataframe 的 concatenate ( 二維合併，也是在二維擴展，所以在二維就是表示 list 增加，或者說 dataframe 的增加列，\n",
     "    \n",
     "    # 可以參考 dataframe [ [...] , [...] ] 不同日期合併的那個例子，dataframe 的 concatenate 也是同一維度合併，所以不同日期的二維 dataframe 合併後還是同樣二維的 dataframe )\n",
+    "\n",
+    "    # 例如這邊兩個 2 * 3 的 array，用列增加，所以是兩個兩列單行資料往列並排，所以是往列增加，變成 4 * 3 ，列變成 4 列 \n",
     "\n",
     "array_9 = numpy.array([[7,8,9],[10,11,12]])\n",
     "\n",
@@ -231,21 +257,61 @@
     "\n",
     "print(array_10)\n",
     "\n",
+    "    # axis = 1 ( 往 x 方向，行的方向 )\n",
+    "\n",
+    "    # 往 x 軸方向就是把原本二維陣列用成列，再加上另一個二維陣列用成列，變成兩行，所以是行的增加，維度一樣不變\n",
+    "\n",
+    "    # 例如這邊兩個 2 * 3 的 array，用行增加，所以是兩個兩列三行資料往行並排，所以是往行增加，變成 2 * 6 ，行變成 6 行\n",
+    "\n",
+    "array_10_2 = numpy.concatenate((array_2,array_9),axis=1)\n",
+    "\n",
+    "print(array_10_2)\n",
+    "\n",
     "# c-2. stack() 等同\n",
+    "\n",
+    "    # 一維 :\n",
+    "\n",
+    "    # axis = 0 ( 往 y 方向增加，列的方向 )\n",
     "\n",
     "    # list 的 append ( 一維合併變二維，一維變二維就是列的增加，舊的版本就是 y 軸的合併，表示增加 list 元素，可以用 stack 就是疊起來來記，就像往 y 軸疊東西 )\n",
     "\n",
     "    # 通常 stack() 會比較常用來合併，因為是 append() 的作用，基本上在資料都是一維時很常會用，把所有資料都合併變成二維的 list of list\n",
     "\n",
+    "    # 例如這邊兩個 1 * 5 的 array，用列增加，所以是兩個單列五行的資料往列並排，往列增加，變成 2 * 5， 列變成 2 列\n",
+    "\n",
     "array_11 = numpy.stack((array,array_7))\n",
     "\n",
     "print(array_11)\n",
     "\n",
-    "    # 二維合併就會變成三維，用一個更大的 list 來包住原本的兩個二維 array，兩個二維疊在一起，所以變三維\n",
+    "    # axis = 1 ( 往 x 方向增加，行的方向 )\n",
+    "\n",
+    "    # 這招很常用，基本上就是把原本一維陣列反轉，再往行方向增加，比較符合一般 dataframe 資料往列方向排序，欄位往行排序的排列方式，同樣會增加維度\n",
+    "\n",
+    "    # 例如這邊兩個 1 * 5 的 array，先做反轉變成 5 * 1 後，再將兩個五列一行的資料往行並排，變成 5 * 2， 行變成 2 行\n",
+    "\n",
+    "array_11_2 = numpy.stack((array,array_7),axis=1)\n",
+    "\n",
+    "print(array_11_2)\n",
+    "\n",
+    "    # 二維 : ( 較少用 )\n",
+    "    \n",
+    "    # 合併就會變成三維，用一個更大的 list 來包住原本的兩個二維 array，所以變三維\n",
+    "\n",
+    "    # axis = 0 ( 往 z 方向增加，新的方向，其實之前一維也可以這樣理解，一維原本只有 x 軸，stack 完往新的 y 軸增加 )\n",
+    "\n",
+    "    # 就是兩個 2 * 3 的陣列往新的軸堆疊，新的軸就是新的 list，而原本的陣列就變成兩個元素放在裡面\n",
     "\n",
     "array_12 = numpy.stack((array_2,array_9))\n",
     "\n",
     "print(array_12)\n",
+    "\n",
+    "    # axis = 1 ( 反轉 )\n",
+    "\n",
+    "    # 就是前面 axis = 0 兩個 2 * 3 陣列合併後的反轉\n",
+    "\n",
+    "array_12_1 = numpy.stack((array_2,array_9),axis=1)\n",
+    "\n",
+    "print(array_12_1)\n",
     "\n",
     "\n",
     "\n",
