--- a/機器學習/Gradient Descend 演算法/code.ipynb
+++ b/機器學習/Gradient Descend 演算法/code.ipynb
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": null,
    "id": "65601741",
    "metadata": {},
    "outputs": [
@@ -168,13 +168,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[[0.        ]\n",
+      " [8.94736842]\n",
+      " [7.89473684]\n",
+      " [0.52631579]]\n",
+      "[[6468.54 6466.58]\n",
+      " [6466.58 6445.76]\n",
+      " [6445.76 6373.45]\n",
+      " [6373.45 6389.45]\n",
+      " [6389.45 6340.  ]\n",
+      " [6340.   6345.06]\n",
+      " [6345.06 6299.19]\n",
+      " [6299.19 6329.94]\n",
+      " [6329.94 6238.01]\n",
+      " [6238.01 6339.39]\n",
+      " [6339.39 6362.9 ]\n",
+      " [6362.9  6370.86]]\n",
       "                            OLS Regression Results                            \n",
       "==============================================================================\n",
       "Dep. Variable:                      y   R-squared:                       0.571\n",
       "Model:                            OLS   Adj. R-squared:                  0.476\n",
       "Method:                 Least Squares   F-statistic:                     5.988\n",
-      "Date:                Sun, 17 Aug 2025   Prob (F-statistic):             0.0222\n",
-      "Time:                        08:38:06   Log-Likelihood:                -62.836\n",
+      "Date:                Thu, 21 Aug 2025   Prob (F-statistic):             0.0222\n",
+      "Time:                        18:55:48   Log-Likelihood:                -62.836\n",
       "No. Observations:                  12   AIC:                             131.7\n",
       "Df Residuals:                       9   BIC:                             133.1\n",
       "Df Model:                           2                                         \n",
@@ -206,18 +222,6 @@
       "c:\\Users\\zxzxa\\anaconda3\\Lib\\site-packages\\scipy\\stats\\_axis_nan_policy.py:430: UserWarning: `kurtosistest` p-value may be inaccurate with fewer than 20 observations; only n=12 observations were given.\n",
       "  return hypotest_fun_in(*args, **kwds)\n"
      ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "shapes (12,3) and (8,2) not aligned: 3 (dim 1) != 8 (dim 0)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[87], line 83\u001b[0m\n\u001b[0;32m     79\u001b[0m \u001b[38;5;66;03m# 5. 做樣本外 R square 測試 , OLS 只能用 scikit learn 的 r2_score 來算配適程度\u001b[39;00m\n\u001b[0;32m     81\u001b[0m x_test_set \u001b[38;5;241m=\u001b[39m add_constant(x_test_data)\n\u001b[1;32m---> 83\u001b[0m y_prediction \u001b[38;5;241m=\u001b[39m model\u001b[38;5;241m.\u001b[39mpredict(x_test_data)\n\u001b[0;32m     85\u001b[0m \u001b[38;5;28mprint\u001b[39m(y_prediction)\n\u001b[0;32m     87\u001b[0m \u001b[38;5;28mprint\u001b[39m(r2_score(y_test))\n",
-      "File \u001b[1;32mc:\\Users\\zxzxa\\anaconda3\\Lib\\site-packages\\statsmodels\\regression\\linear_model.py:409\u001b[0m, in \u001b[0;36mRegressionModel.predict\u001b[1;34m(self, params, exog)\u001b[0m\n\u001b[0;32m    406\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m exog \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m    407\u001b[0m     exog \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mexog\n\u001b[1;32m--> 409\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m np\u001b[38;5;241m.\u001b[39mdot(exog, params)\n",
-      "\u001b[1;31mValueError\u001b[0m: shapes (12,3) and (8,2) not aligned: 3 (dim 1) != 8 (dim 0)"
-     ]
     }
    ],
    "source": [
@@ -242,8 +246,8 @@
     "# 算 array 的元素總數可以先做成切片再來計算，不然只能算一維的\n",
     "\n",
     "N = len(stock_price)\n",
-    "stock_price_train = stock_price[:int(numpy.floor(N*0.6)),]\n",
-    "stock_price_test = stock_price[int(numpy.floor(N*0.6)):,]\n",
+    "stock_price_train = stock_price[:int(numpy.floor(N*0.6))]\n",
+    "stock_price_test = stock_price[int(numpy.floor(N*0.6)):]\n",
     "\n",
     "# b. 再做成變數資料\n",
     "\n",
@@ -280,7 +284,13 @@
     "\n",
     "# axis = 1 or -1 是往 y 軸展開，這個比較特別，會變成欄和列互換，就是 x 軸展開後再做矩陣反轉，陣列的大小會改變\n",
     "\n",
+    "print(X_1_train)\n",
+    "\n",
+    "print(X_2_train)\n",
+    "\n",
     "x_train_data = numpy.stack((X_1_train,X_2_train),axis=-1)\n",
+    "\n",
+    "print(x_train_data)\n",
     "\n",
     "x_train_set = add_constant(x_train_data)\n",
     "\n",
@@ -301,15 +311,15 @@
     "\n",
     "# 5. 做樣本外 R square 測試 , OLS 只能用 scikit learn 的 r2_score 來算配適程度\n",
     "\n",
-    "x_test_set = add_constant(x_test_data)\n",
+    "# x_test_set = add_constant(x_test_data)\n",
     "\n",
-    "y_prediction = model.predict(x_test_data)\n",
+    "# y_prediction = model.predict(x_test_data)\n",
     "\n",
-    "print(y_prediction)\n",
+    "# print(y_prediction)\n",
     "\n",
-    "print(r2_score(y_test))\n",
+    "# print(r2_score(y_test))\n",
     "\n",
-    "print(model_2.score(x_test_data,y_test))\n",
+    "# print(model_2.score(x_test_data,y_test))\n",
     "\n",
     "\n",
     "\n",
