修改 numpy 模組筆記內容

--- a/python 模組使用練習/numpy 模組.ipynb
+++ b/python 模組使用練習/numpy 模組.ipynb
@@ -16,8 +16,13 @@
       "[1 3 5]\n",
       "[[1 2 3]\n",
       " [4 5 6]]\n",
+      "[[1 2 3]\n",
+      " [4 5 6]]\n",
+      "[[1 2 3]\n",
+      " [4 5 6]]\n",
       "[[1 3]\n",
       " [4 6]]\n",
+      "[1 6]\n",
       "[1 2 3]\n",
       "[2 4 6]\n",
       "[[1 2]\n",
@@ -140,14 +145,24 @@
     "\n",
     "print(array_2[0:2,0:3])\n",
     "\n",
-    "# 切片也可以用 list 來表達要選擇哪一部分，和 dataframe 的 [[\"...\",\"...\"]] 裡面可以放 list 來挑選欄位一樣\n",
+    "print(array_2[:,0:3])\n",
+    "\n",
+    "print(array_2[0:2,:])\n",
+    "\n",
+    "# 切片也可以用 list 來選擇需要的行列 \n",
+    "\n",
+    "# ( 和 dataframe 的 loc [ : , [ ... , ... ] ] 用欄位的 list 來挑選很像，只是 array 是用位置索引，dataframe 是用列和欄位標籤索引 )\n",
     "\n",
     "print(array_2[0:2,[0,2]])\n",
+    "\n",
+    "# 下面和上面看起來一樣，可是只要出現兩邊相同長度的陣列，就會被自動視為進階索引的使用，而不是切片，但只要兩邊不同就是切片\n",
+    "\n",
+    "print(array_2[[0,1],[0,2]])\n",
     "\n",
     "\n",
     "# c. 進階索引\n",
     "\n",
-    "# 可以用索引陣列來對應相對應維度的陣列來呼叫元素，會回傳符合條件的值的一維陣列\n",
+    "# 可以用索引陣列 ( 或 索引 list ) 來對應相對應維度的陣列來呼叫元素，會回傳符合條件的值的一維陣列\n",
     "\n",
     "# 這個方法比較常被 numpy 的 where() 函數使用，因為會回傳索引陣列，需要用它來找元素\n",
     "\n",
@@ -163,7 +178,7 @@
     "\n",
     "# 然後 array 長度要一樣，因為這樣所有索引才能產生相對應維度座標\n",
     "\n",
-    "print( array_2[ numpy.array([0,1,1]) , numpy.array([1,0,2]) ] )\n",
+    "print( array_2[ [0,1,1] , [1,0,2] ] )\n",
     "\n",
     "# 二維以上可以用切片的冒號來代表一個維度，表示那一個維度的所有元素，直接讓另一個維度來對應，是不同長度的，會產生 i * j 結果\n",
     "\n",
