修改 numpy 模組筆記內容

--- a/python 模組使用練習/numpy 模組.ipynb
+++ b/python 模組使用練習/numpy 模組.ipynb
@@ -151,11 +151,15 @@
     "\n",
     "# 切片也可以用 list 來選擇需要的行列 \n",
     "\n",
-    "# ( 和 dataframe 的 loc [ : , [ ... , ... ] ] 用欄位的 list 來挑選很像，只是 array 是用位置索引，dataframe 是用列和欄位標籤索引 )\n",
+    "# ( 和 dataframe 的 loc [ : , [ ... , ... ] ] 用欄位的 list 來挑選很像，\n",
+    "\n",
+    "# 只是 array 是用位置索引，dataframe 是用列和欄位標籤索引 )\n",
     "\n",
     "print(array_2[0:2,[0,2]])\n",
     "\n",
-    "# 下面和上面看起來一樣，可是只要出現兩邊相同長度的陣列，就會被自動視為進階索引的使用，而不是切片，但只要兩邊不同就是切片\n",
+    "# 下面和上面看起來一樣，可是只要出現兩邊相同長度的陣列，就會被自動視為進階索引的使用，而不是切片，\n",
+    "\n",
+    "# 但只要兩邊不同就是切片\n",
     "\n",
     "print(array_2[[0,1],[0,2]])\n",
     "\n",
