修改 numpy 模組筆記內容

--- a/python 模組使用練習/numpy 模組.ipynb
+++ b/python 模組使用練習/numpy 模組.ipynb
@@ -139,7 +139,7 @@
     "\n",
     "print(array[0:5:2])\n",
     "\n",
-    "# 二維 array\n",
+    "# 二維 array ( 矩陣式切片 )\n",
     "\n",
     "# 和 dataframe 的 loc 使用類似，只是 array 可以直接操作，不用函數，就是 [ a:b , c:d ]，a:b 是列，c:d 是欄位\n",
     "\n",
