K-means 修改實作筆記內容

--- a/機器學習/K-means 演算法/code.ipynb
+++ b/機器學習/K-means 演算法/code.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "bedbf7b3",
    "metadata": {},
    "outputs": [
@@ -37,6 +37,8 @@
     "\n",
     "# 這邊 iris 是 sklearn 的 bunch 物件，基本上就是字典，可以用屬性或中括號呼叫值\n",
     "\n",
+    "# 字典裡的樣本資料 x , y 會是 numpy 的陣列\n",
+    "\n",
     "x = iris[\"data\"]\n",
     "y = iris[\"target\"]\n",
     "\n",
@@ -67,7 +69,7 @@
     "\n",
     "y_map = numpy.zeros_like(y)\n",
     "\n",
-    "# 用布林遮罩來選取類別分別是 0 , 1 , 2 的結果，再用樣本資料分類結果的眾數來代表模型分類出的類別的真正代碼\n",
+    "# 用布林遮罩來選取類別分別是 0 , 1 , 2 的模型分類結果，再用樣本資料分類結果的眾數來代表模型分類出的類別的真正代碼\n",
     "\n",
     "# 用 scipy.stats 的 mode，會回傳一個 tuple 有兩個值，第一個是眾數，第二個是數字是眾數的次數\n",
     "\n",
@@ -78,7 +80,7 @@
     "    y_map[y_prediction == i] = mode(y[y_prediction==i])[0]\n",
     "\n",
     "\n",
-    "# 5. 把 y_prediction map 完的 y_map 作為正確分群代碼的 y 來產生準確度\n",
+    "# 5. 把 y_prediction map 完的 y_map 作為正確分群代碼的預測值 y 來產生準確度\n",
     "\n",
     "print(accuracy_score(y,y_map))\n",
     "\n",
