修改 K-means 筆記內容

--- a/機器學習/K-means 演算法/code.ipynb
+++ b/機器學習/K-means 演算法/code.ipynb
@@ -47,7 +47,9 @@
     "\n",
     "# 先創建物件，和同樣 sklearn 的 Linear Regression 一樣\n",
     "\n",
-    "# random_state 是隨機種子，為隨機選取的分布依據\n",
+    "# ( 選擇性 )\n",
+    "\n",
+    "# random_state 是隨機種子，為隨機選取的分布依據，如果要控制結果可以選擇一樣參數來產生相同結果\n",
     "\n",
     "# n_init 為試行的次數，每次都以不同中心點開始，並取最小距離平方和的結果，避免有局部最小值的可能\n",
     "\n",
