修改 numpy 筆記內容

--- a/python 模組使用練習/numpy 模組.ipynb
+++ b/python 模組使用練習/numpy 模組.ipynb
@@ -31,6 +31,7 @@
       "[[1 2]\n",
       " [3 4]\n",
       " [5 6]]\n",
+      "[2]\n",
       "[[1 2]\n",
       " [3 4]\n",
       " [5 6]]\n",
@@ -408,6 +409,33 @@
     "\n",
     "print(array_22)\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "36e97b63",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# numpy 的其他技巧\n",
+    "\n",
+    "\n",
+    "# 1. numpy 的一維單元素陣列可以直接當值來操作，不用加 int\n",
+    "\n",
+    "array = numpy.array([1])\n",
+    "\n",
+    "a = array + 2 \n",
+    "\n",
+    "print(a)\n"
    ]
   }
  ],
