修改 numpy 筆記內容

--- a/python 模組使用練習/numpy 模組.ipynb
+++ b/python 模組使用練習/numpy 模組.ipynb
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "36e97b63",
    "metadata": {},
    "outputs": [
@@ -429,7 +429,7 @@
     "# numpy 的其他技巧\n",
     "\n",
     "\n",
-    "# 1. numpy 的一維單元素陣列可以直接當值來操作，不用加 int\n",
+    "# 1. numpy 的一維單元素陣列可以直接當值來操作，不用做 int()\n",
     "\n",
     "array = numpy.array([1])\n",
     "\n",
