增加 numpy 模組筆記內容

--- a/python 模組使用練習/numpy 模組.ipynb
+++ b/python 模組使用練習/numpy 模組.ipynb
@@ -12,6 +12,8 @@
      "text": [
       "1\n",
       "2\n",
+      "[[1 2 3]\n",
+      " [4 5 6]]\n",
       "2\n",
       "[1 3 5]\n",
       "[[1 2 3]\n",
@@ -31,7 +33,6 @@
       "[[1 2]\n",
       " [3 4]\n",
       " [5 6]]\n",
-      "[2]\n",
       "[[1 2]\n",
       " [3 4]\n",
       " [5 6]]\n",
@@ -89,7 +90,7 @@
     "\n",
     "# 和 dataframe 不同的地方 : \n",
     "\n",
-    "    # a. array 則是基本上是 array 陣列，主要是以一維作為基礎\n",
+    "    # a. array 基本上是 array 陣列，主要是以一維作為基礎\n",
     "\n",
     "    # b. dataframe 一定有欄和列，是加上 row 和 column 的 index label ( 可以印 dataframe 和 array 就看得出差異，dataframe 列和欄有額外所以和標籤，array 沒有 )，\n",
     "    \n",
@@ -98,6 +99,12 @@
     "    # ex. numpy array = array( [1,2,3] , [4,5,6] )，numpy array 不需要 column\n",
     "\n",
     "    # ex. pandas dataframe = dataframe( { a: [1,2,3] , b: [4,5,6] } )，pandas dataframe 需要 column\n",
+    "\n",
+    "    # c. 也因為 dataframe 的列沒有文字索引，所以列只能用欄位條件產生布林值挑選 ( 除非是 pivot )，array 的列則是因為有像 list 的基本數字索引，所以可以直接用數字索引挑選，\n",
+    "\n",
+    "    # 欄位的挑選部分就沒有太大差別，dataframe 是欄位文字標籤，array 是數字索引挑選\n",
+    "\n",
+    "# 總結 : list 和 array 就是差在 list 是一維 [...]， array 可以是二維 [... , ...]，dataframe 和 array 就是差在 dataframe 是用文字標籤索引 [\"...\"]，array 是數字索引 [0,1]\n",
     "\n",
     "\n",
     "import numpy\n",
@@ -142,7 +149,9 @@
     "\n",
     "# 二維 array ( 矩陣式切片 )\n",
     "\n",
-    "# 和 dataframe 的 loc 使用類似，只是 array 可以直接操作，不用函數，就是 [ a:b , c:d ]，a:b 是列，c:d 是欄位\n",
+    "# 和 dataframe 的 loc 使用基本上一樣，只是 array 可以直接操作，不用函數，就是 [ a:b , c:d ]，a:b 是列，c:d 是欄位，\n",
+    "\n",
+    "# 此外 dataframe 是用文字標籤索引，array 是用數字索引\n",
     "\n",
     "print(array_2[0:2,0:3])\n",
     "\n",
@@ -150,19 +159,23 @@
     "\n",
     "print(array_2[0:2,:])\n",
     "\n",
-    "# 切片也可以用 list 來選擇需要的行列 \n",
+    "# b-1. 和 dafatrame 的 loc 一樣，可以省略行的部分\n",
+    "\n",
+    "print(array_2[0:2])\n",
+    "\n",
+    "# b-2. array 切片也可以混和 list 來選擇需要的行列 \n",
     "\n",
     "# ( 切片和索引陣列的混和，看到 : 就是切片，看到 [0,1] 就是索引陣列 )\n",
     "\n",
-    "# ( 和 dataframe 的 loc [ : , [ ... , ... ] ] 用欄位的 list 來挑選很像，\n",
+    "# ( 和 dataframe 的 loc [ : , [ ... , ... ] ] 用欄位的索引 list 配合切片來挑選一樣，\n",
     "\n",
-    "# 只是 array 是用位置索引，dataframe 是用列和欄位標籤索引 )\n",
+    "# 只是欄位部分 array 是用數字位置索引，dataframe 是用欄位文字標籤索引 )\n",
     "\n",
     "print(array_2[0:2,[0,2]])\n",
     "\n",
-    "# 下面和上面看起來一樣，可是只要出現兩邊相同長度的陣列，就會被自動視為進階索引的使用，而不是切片，\n",
+    "# b-3. 下面和上面看起來一樣，可是只要出現兩邊相同長度的陣列，就會被自動視為進階索引的使用，而不是切片，\n",
     "\n",
-    "# 但只要兩邊不同就是切片\n",
+    "# 但只要兩邊不同就是切片 ( 兩邊如果是不同長度的陣列會錯誤，不能這樣挑 )\n",
     "\n",
     "print(array_2[[0,1],[0,2]])\n",
     "\n",
