新增 confusion matrix 和修正線性迴歸內容

--- a/機器學習/Linear Regression 模型/code.ipynb
+++ b/機器學習/Linear Regression 模型/code.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "75e544a9",
    "metadata": {},
    "outputs": [
@@ -10,7 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "a參數 = [[2.0190522]] , b參數 = [0.85198196] , 模型 R square 為 0.9847933078952412\n"
+      "a參數 = [[2.07302331]] , b參數 = [0.91646285] , 模型 R square 為 0.9955095501512689\n"
      ]
     }
    ],
@@ -45,7 +45,7 @@
     "\n",
     "# 2. 做訓練資料集和測試資料集\n",
     "\n",
-    "x_test , x_train , y_test , y_train = train_test_split(x,y,test_size=0.2,random_state=42)\n",
+    "x_train , x_test , y_train , y_test = train_test_split(x,y,test_size=0.2,random_state=42)\n",
     "\n",
     "\n",
     "# 3. 進行迴歸\n",
