增加 confusion matrix 多類別範例

--- a/機器學習/Confusion Matrix 指標/code.ipynb
+++ b/機器學習/Confusion Matrix 指標/code.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": null,
    "id": "50c56a24",
    "metadata": {},
    "outputs": [
@@ -41,14 +41,14 @@
     "# 區分訓練和測試資料集，再利用 Confusion Matrix 來衡量分類模型效力\n",
     "\n",
     "\n",
+    "# 兩個類別的 Confusion Matrix 範例\n",
+    "\n",
+    "\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.cluster import KMeans\n",
     "from scipy.stats import mode\n",
     "from sklearn.metrics import confusion_matrix , classification_report\n",
     "import numpy\n",
-    "\n",
-    "\n",
-    "# 兩個類別的 Confusion Matrix 範例\n",
     "\n",
     "\n",
     "# 1. 先產生資料\n",
@@ -113,6 +113,97 @@
     "\n",
     "print(classification_report(y_test,y_map,target_names=[\"0\",\"1\"]))\n",
     "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "df7cdfd3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[19  0  0]\n",
+      " [ 0 17  2]\n",
+      " [ 0  6 16]]\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "      setosa       1.00      1.00      1.00        19\n",
+      "  versicolor       0.74      0.89      0.81        19\n",
+      "   virginica       0.89      0.73      0.80        22\n",
+      "\n",
+      "    accuracy                           0.87        60\n",
+      "   macro avg       0.88      0.87      0.87        60\n",
+      "weighted avg       0.88      0.87      0.87        60\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\zxzxa\\anaconda3\\Lib\\site-packages\\sklearn\\cluster\\_kmeans.py:1419: UserWarning: KMeans is known to have a memory leak on Windows with MKL, when there are less chunks than available threads. You can avoid it by setting the environment variable OMP_NUM_THREADS=1.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 三個以上類別的 Confusion Matrix 範例\n",
+    "\n",
+    "\n",
+    "# 用鳶尾花資料當範例\n",
+    "\n",
+    "\n",
+    "from sklearn.datasets import load_iris\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.cluster import KMeans\n",
+    "from scipy.stats import mode\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "from sklearn.metrics import classification_report\n",
+    "import numpy\n",
+    "\n",
+    "\n",
+    "# 1. 先準備資料並拆分成訓練和測試資料\n",
+    "\n",
+    "iris = load_iris()\n",
+    "\n",
+    "x = iris[\"data\"]\n",
+    "y = iris[\"target\"]\n",
+    "\n",
+    "x_train , x_test , y_train , y_test = train_test_split(x,y,test_size=0.4)\n",
+    "\n",
+    "\n",
+    "# 2. 進行模型訓練\n",
+    "\n",
+    "model = KMeans(n_clusters=3)\n",
+    "model.fit(x_train)\n",
+    "\n",
+    "y_prediction = model.predict(x_test)\n",
+    "\n",
+    "\n",
+    "# 3. 重新 map 預測結果\n",
+    "\n",
+    "y_map = numpy.zeros_like(y_prediction)\n",
+    "\n",
+    "for i in range(3) : \n",
+    "\n",
+    "    y_map[y_prediction == i] = mode(y_test[y_prediction == i])[0]\n",
+    "\n",
+    "\n",
+    "# 4. 做出混淆矩陣以及評估指標\n",
+    "\n",
+    "# accuracy : 預測和樣本整體符合率\n",
+    "\n",
+    "# precision : 模型判斷正確率\n",
+    "\n",
+    "# recall : 樣本沒有缺漏率\n",
+    "\n",
+    "print(confusion_matrix(y_test,y_map))\n",
+    "\n",
+    "print(classification_report(y_test,y_map,target_names=iris[\"target_names\"]))\n",
     "\n"
    ]
   }
