修改 ROC 和 AUC 指標內容

--- a/機器學習/ROC 和 AUC 指標/code.ipynb
+++ b/機器學習/ROC 和 AUC 指標/code.ipynb
@@ -109,7 +109,7 @@
     "    \n",
     "fpr , tpr , threhold_set = roc_curve(group_true,group_measure)\n",
     "\n",
-    "# auc 也是一樣，用測量值 x \n",
+    "# auc 也是一樣，用測量值 x ( auc 介於 0.5 和 1 之間，越接近 1 越好 )\n",
     "\n",
     "auc_score = roc_auc_score(group_true,group_measure)\n",
     "\n",
