增加 decision tree 筆記內容

--- a/機器學習/Decision Tree 模型/code.ipynb
+++ b/機器學習/Decision Tree 模型/code.ipynb
@@ -126,6 +126,8 @@
     "\n",
     "tree.plot_tree(model,feature_names=iris[\"feature_names\"],class_names=iris[\"target_names\"],filled=True)\n",
     "\n",
+    "# sklearn 有封裝 matplotlib 的功能在其模組裡，所以可以直接呼叫使用\n",
+    "\n",
     "plt.show()\n",
     "\n",
     "\n",
@@ -142,6 +144,8 @@
     "# 要多一個 ConfusionMatrixDisplay 來將目標變數值給予名稱\n",
     "\n",
     "display = ConfusionMatrixDisplay(matrix,display_labels=iris[\"target_names\"])\n",
+    "\n",
+    "# confusion matrix 也一樣，可以直接呼叫 matplotlib 使用\n",
     "\n",
     "plt.figure(figsize=(5,5))\n",
     "\n",
