新增常見函數練習 Math 模組函數的筆記

--- a/基礎 python 語法練習/常見函數練習/String 函數.ipynb
+++ b/基礎 python 語法練習/常見函數練習/String 函數.ipynb
@@ -41,11 +41,23 @@
     }
    ],
    "source": [
-    "# 內建常見的函數練習 ( 多數是 string 型別的方法，因此只適用於字串 )\n",
+    "# 內建常見的 String 函數練習 ( 這邊是 string 型別的方法，因此只適用於字串 )\n",
     "\n",
     "\n",
     "\n",
-    "# 1. join 和 split 函數\n",
+    "# 1. str 函數\n",
+    "\n",
+    "# 將變數型別轉換為字串的函數\n",
+    "\n",
+    "num = 1\n",
+    "\n",
+    "str = str(num)\n",
+    "\n",
+    "print(str)\n",
+    "\n",
+    "\n",
+    "\n",
+    "# 2. join 和 split 函數\n",
     "\n",
     "\n",
     "# a. join : \n",
@@ -85,7 +97,7 @@
     "\n",
     "\n",
     "\n",
-    "# 2. splitlines 和 strip 函數\n",
+    "# 3. splitlines 和 strip 函數\n",
     "\n",
     "\n",
     "# a. splitlines : \n",
@@ -148,7 +160,7 @@
     "\n",
     "\n",
     "\n",
-    "# 3. replace 函數\n",
+    "# 4. replace 函數\n",
     "\n",
     "# 就是以前 notepad 和 word 的搜尋替換，可以指定搜尋某個字元並換成另一個字元\n",
     "\n",
@@ -162,7 +174,7 @@
     "\n",
     "\n",
     "\n",
-    "# 4. endswith 函數\n",
+    "# 5. endswith 函數\n",
     "\n",
     "# 判斷字尾是否符合特定條件並產生布林值的函數，常用來判斷是否為某個檔案類型\n",
     "\n",
@@ -174,7 +186,7 @@
     "\n",
     "\n",
     "\n",
-    "# 5. count 函數\n",
+    "# 6. count 函數\n",
     "\n",
     "# 計算字串內出現某個字元的次數，常常用來判斷 csv 檔案文字每一行的逗號有幾個，是不是有缺並移除資料不足的行\n",
     "\n",
@@ -190,7 +202,7 @@
     "\n",
     "\n",
     "\n",
-    "# 6. \"搜尋字串\" + in \"目標字串\" 的方法\n",
+    "# 7. \"搜尋字串\" + in \"目標字串\" 的方法\n",
     "\n",
     "# 因為 python 的 string 沒有 has() 的函數，因此要用 in 來代替，或 count (回傳出現次數) / find (回傳出現字串索引位置)\n",
     "\n",
