數字函數筆記修改

--- a/基礎 python 語法練習/常見函數練習/Math 函數.ipynb
+++ b/基礎 python 語法練習/常見函數練習/Math 函數.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "2da23515",
    "metadata": {},
    "outputs": [
@@ -27,7 +27,7 @@
     }
    ],
    "source": [
-    "# 內建常見的 Math 函數練習 ( 這邊是 int , float ... 型別的方法，因此只適用於數字 )\n",
+    "# 內建數字函數和常見的 Math 函數練習 ( 這邊是 int , float ... 型別的方法，因此只適用於數字 )\n",
     "\n",
     "\n",
     "\n",
@@ -63,7 +63,7 @@
     "\n",
     "print(round_num)\n",
     "\n",
-    "# ceil 和 floor 是向上和向下四捨五入取整數\n",
+    "# ceil 和 floor 是向上和向下四捨五入取到整數\n",
     "\n",
     "upper_round_num = math.ceil(num)\n",
     "\n",
