新增 Logistic Regression 多類別分類案例

--- a/機器學習/Logistic Regression 模型/code.ipynb
+++ b/機器學習/Logistic Regression 模型/code.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "c308777a",
    "metadata": {},
    "outputs": [
@@ -97,7 +97,7 @@
     "\n",
     "        y_map.append(0)\n",
     "\n",
-    "report = classification_report(y,y_map,labels=[\"0\",\"1\"])\n",
+    "report = classification_report(y,y_map,target_names=[\"0\",\"1\"])\n",
     "\n",
     "print(report)\n",
     "\n",
@@ -140,6 +140,7 @@
     "\n",
     "# 使用上有 lamda 的成分，上面 frompyfunc 裡面的 sigmoid 不用放參數，放在下面呼叫時\n",
     "\n",
+    "\n",
     "y_prediction = array_sigmoid(linear_y)\n",
     "\n",
     "print(y_prediction)\n",
@@ -156,7 +157,7 @@
     "\n",
     "        y_map_2.append(0)\n",
     "\n",
-    "report_2 = classification_report(y,y_map_2,labels=[\"0\",\"1\"])\n",
+    "report_2 = classification_report(y,y_map_2,target_names=[\"0\",\"1\"])\n",
     "\n",
     "print(report_2)\n",
     "\n",
@@ -191,6 +192,8 @@
     "\n",
     "# ( Logistic Regression 的 model.predict 是預設 0.5 以上就視為 1 ，小於就視為 0，這邊一樣比照 )\n",
     "\n",
+    "# 也可以直接用 model.predict_proba 來算\n",
+    "\n",
     "y_logistic = x[:,0]*model.coef_[0,0] + x[:,1]*model.coef_[0,1] + model.intercept_\n",
     "\n",
     "print(y_logistic)\n",
@@ -216,9 +219,170 @@
     "\n",
     "        y_map_3.append(0)\n",
     "\n",
-    "report_3 = classification_report(y,y_map_3,labels=[\"0\",\"1\"])\n",
+    "report_3 = classification_report(y,y_map_3,target_names=[\"0\",\"1\"])\n",
     "\n",
     "print(report_3)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "5e0c44ad",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[-0.39863055  0.73804755 -2.13352915 -0.8234161 ]\n",
+      " [ 0.27913268 -0.44844007 -0.03008612 -0.78112937]\n",
+      " [ 0.11949787 -0.28960748  2.16361527  1.60454547]] [  8.7064509    2.75908099 -11.46553189]\n",
+      "[[0.02 0.96 0.02 1.  ]\n",
+      " [0.29 0.71 0.   1.  ]\n",
+      " [0.   0.04 0.96 2.  ]\n",
+      " [0.02 0.89 0.09 1.  ]\n",
+      " [0.06 0.88 0.06 1.  ]\n",
+      " [0.94 0.06 0.   0.  ]\n",
+      " [0.   0.02 0.98 2.  ]\n",
+      " [0.11 0.86 0.02 1.  ]\n",
+      " [0.98 0.02 0.   0.  ]\n",
+      " [0.01 0.76 0.23 1.  ]\n",
+      " [0.05 0.89 0.07 1.  ]\n",
+      " [0.99 0.01 0.   0.  ]\n",
+      " [0.01 0.83 0.16 1.  ]\n",
+      " [0.   0.62 0.38 1.  ]\n",
+      " [0.95 0.05 0.   0.  ]\n",
+      " [0.98 0.02 0.   0.  ]\n",
+      " [0.   0.27 0.73 2.  ]\n",
+      " [0.01 0.84 0.15 1.  ]\n",
+      " [0.98 0.02 0.   0.  ]\n",
+      " [0.97 0.03 0.   0.  ]\n",
+      " [0.   0.17 0.83 2.  ]\n",
+      " [0.03 0.89 0.08 1.  ]\n",
+      " [0.   0.01 0.99 2.  ]\n",
+      " [0.98 0.02 0.   0.  ]\n",
+      " [0.   0.2  0.8  2.  ]\n",
+      " [0.15 0.84 0.01 1.  ]\n",
+      " [0.96 0.04 0.   0.  ]\n",
+      " [0.96 0.04 0.   0.  ]\n",
+      " [0.04 0.93 0.03 1.  ]\n",
+      " [0.   0.01 0.99 2.  ]\n",
+      " [0.   0.23 0.77 2.  ]\n",
+      " [0.   0.47 0.53 2.  ]\n",
+      " [0.   0.1  0.9  2.  ]\n",
+      " [0.   0.17 0.83 2.  ]\n",
+      " [0.99 0.01 0.   0.  ]\n",
+      " [0.97 0.03 0.   0.  ]\n",
+      " [0.   0.06 0.94 2.  ]\n",
+      " [0.98 0.02 0.   0.  ]\n",
+      " [0.96 0.04 0.   0.  ]\n",
+      " [0.01 0.85 0.14 1.  ]\n",
+      " [0.   0.42 0.58 2.  ]\n",
+      " [0.03 0.9  0.07 1.  ]\n",
+      " [0.95 0.05 0.   0.  ]\n",
+      " [0.   0.16 0.84 2.  ]\n",
+      " [0.   0.27 0.73 2.  ]\n",
+      " [0.   0.11 0.89 2.  ]\n",
+      " [0.   0.03 0.97 2.  ]\n",
+      " [0.01 0.77 0.21 1.  ]\n",
+      " [0.98 0.02 0.   0.  ]\n",
+      " [0.95 0.05 0.   0.  ]\n",
+      " [0.02 0.71 0.27 1.  ]\n",
+      " [0.01 0.64 0.36 1.  ]\n",
+      " [0.   0.27 0.73 2.  ]\n",
+      " [0.97 0.03 0.   0.  ]\n",
+      " [0.01 0.85 0.14 1.  ]\n",
+      " [0.97 0.03 0.   0.  ]\n",
+      " [0.01 0.71 0.28 1.  ]\n",
+      " [0.96 0.04 0.   0.  ]\n",
+      " [0.01 0.89 0.11 1.  ]\n",
+      " [0.   0.57 0.43 1.  ]]\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "      setosa       1.00      1.00      1.00        20\n",
+      "  versicolor       0.95      1.00      0.98        21\n",
+      "   virginica       1.00      0.95      0.97        19\n",
+      "\n",
+      "    accuracy                           0.98        60\n",
+      "   macro avg       0.98      0.98      0.98        60\n",
+      "weighted avg       0.98      0.98      0.98        60\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\zxzxa\\anaconda3\\Lib\\site-packages\\sklearn\\linear_model\\_logistic.py:1247: FutureWarning: 'multi_class' was deprecated in version 1.5 and will be removed in 1.7. From then on, it will always use 'multinomial'. Leave it to its default value to avoid this warning.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 用 Logistic Regression 進行三組以上分類的案例\n",
+    "\n",
+    "\n",
+    "\n",
+    "# 基本觀念還是一樣，只是會變成 n 類就有 n 個迴歸式\n",
+    "\n",
+    "# 不同的迴歸式得到的 Logistic 值再用函數轉成機率，看哪一組機率比較大就是哪一組\n",
+    "\n",
+    "\n",
+    "\n",
+    "from sklearn.datasets import load_iris\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.metrics import classification_report\n",
+    "import numpy\n",
+    "\n",
+    "\n",
+    "# 1. 把資料分成訓練集和測試集\n",
+    "\n",
+    "iris = load_iris()\n",
+    "\n",
+    "x = iris[\"data\"]\n",
+    "y = iris[\"target\"]\n",
+    "\n",
+    "x_train , x_test , y_train , y_test = train_test_split(x,y,test_size=0.4)\n",
+    "\n",
+    "\n",
+    "# 2. 進行迴歸\n",
+    "\n",
+    "# 這邊用的是 softmax 函數 ( multinominal ) ，是針對多類別的 Logistic Regression 的機率函數\n",
+    "\n",
+    "# solver 可以選擇 lbfgs , 比較適合小資料集\n",
+    "\n",
+    "# max_iter 則是試行次數，Logistic Regression 也需要類似梯度下降來逼近求解\n",
+    "\n",
+    "# 基本上不做設定也是會自己做多類別迴歸\n",
+    "\n",
+    "model = LogisticRegression(multi_class=\"multinomial\",solver=\"lbfgs\",max_iter=200)\n",
+    "model.fit(x_train,y_train)\n",
+    "\n",
+    "print(model.coef_,model.intercept_)\n",
+    "\n",
+    "\n",
+    "# 3. 產生預測值以及預測機率\n",
+    "\n",
+    "y_prediction = model.predict(x_test)\n",
+    "\n",
+    "y_prediction_rate = numpy.round(model.predict_proba(x_test),decimals=2)\n",
+    "\n",
+    "# 將各樣本的各類別預測機率及預測結果列出來\n",
+    "\n",
+    "y_test_set = numpy.concatenate((y_prediction_rate,y_prediction.reshape(-1,1)),axis=1)\n",
+    "\n",
+    "print(y_test_set)\n",
+    "\n",
+    "\n",
+    "# 4. 產生指標報告\n",
+    "\n",
+    "report = classification_report(y_test,y_prediction,target_names=iris[\"target_names\"])\n",
+    "\n",
+    "print(report)\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   }
  ],
